2012-11-15  Paul Tagliamonte  <paultag@sunlightfoundation.com>

* sunlight/services/congress.py:
 - Add **kwargs for each method, and pass them along to all requests. This
   helps prevent cases where we add an argument and older versions break.

2012-06-29  James Turk  <jturk@sunlightfoundation.com>

* sunlight/service.py:
 - Add new safe_encode function to use rather then urlencode
* sunlight/services/*.py:
 - Migrate the sunlight.service.urlencode call to a .safe_encode call.
* Bump release to 1.1.5

2012-06-29  Paul Tagliamonte  <paultag@sunlightfoundation.com>

* sunlight/services/openstates.py:
 - Encode all URL pararms before they get to urlencode, in the event a
   non-ascii name is passed as a kwarg.
* Bump release to 1.1.4

2012-05-14  Paul Tagliamonte  <paultag@sunlightfoundation.com>

* sunlight/services/openstates.py:
 - Added a new method - "openstates.bill", to get single bills by bill ID
 - Fixed the exception that gets raised
   when running "openstates.bill(None)" from something cryptic to something
   a bit more explicit.
* Bump release to 1.1.3

2012-04-12  Paul Tagliamonte  <paultag@sunlightfoundation.com>

* sunlight/services/capitolwords.py: Fixed a URL Encoding issue that was
sitting there, undiscovered. Thanks, dandrinkard!
* Bump release to 1.1.2

2012-02-27  James Turk  <jturk@sunlightfoundation.com>

[James]
  - Yet another fix for Python 3, remove an extra items() call in congress client
  - Bumping to 1.1.1
[Paul]
  - Modified all the examples to work on Python 3

2012-02-26  Paul Tagliamonte  <paultag@sunlightfoundation.com>

* MANIFEST.in: Including the docs in the sdist tarball.
* Bump release to 1.0.6, then to 1.1.0

2012-02-21  Paul Tagliamonte  <paultag@sunlightfoundation.com>

* sunlight/service.py: Fixed the decode param to work with python2.6. This
issue was discovered and reported by @eyeseast on GitHub. Sorry for the bumpy
ride, everyone.
* Bump release to 1.0.5

2012-02-17  Paul Tagliamonte  <paultag@sunlightfoundation.com>