@@ -29,7 +29,7 @@ to register for a key (if they don't already have one) -- after all, signing up
 for a Sunlight API key is fun for the whole family!
 """
 
-KEY_LOCATION    = "~/.sunlight.key"
+KEY_LOCATION = "~/.sunlight.key"
 """
 This is the location of the api key that's stored on the filesystem. Currently,
 it uses a file directly under a tilde, so that windows users don't have to feel
@@ -37,7 +37,7 @@ as much pain when using the API. Usually this is something like
 ``~/.sunlight.key``
 """
 
-KEY_ENVVAR      = "SUNLIGHT_API_KEY"
+KEY_ENVVAR = "SUNLIGHT_API_KEY"
 """
 This is the name of the ``os.environ`` key to look for. It's usually something
 stupid simple, like ``SUNLIGHT_API_KEY``.
